--- a/demo.html
+++ b/demo.html
@@ -22,6 +22,7 @@
     align-items: center;
     gap: 12px;
     max-width: 700px;
+        text-align:center;
   }
 
   #notify-bar a {
@@ -68,3 +69,4 @@ window.SmartAzanNotification = {
 
 </body>
 </html>
+
