Center the notify bar content
Added justify-content property to center the notify bar.

--- a/demo.html
+++ b/demo.html
@@ -22,7 +22,7 @@
     align-items: center;
     gap: 12px;
     max-width: 700px;
-        text-align:center;
+  justify-content: center;
   }
 
   #notify-bar a {
@@ -69,4 +69,5 @@ window.SmartAzanNotification = {
 
 </body>
 </html>
+
 
